--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="don_t_already_have_a_kuna_powered_device">Don\'t already have a Kuna powered device?</string>
     <string name="get_started">Get Started !</string>
     <string name="log_in">Log in</string>
+    <string name="title_activity_second">SecondActivity</string>
 </resources>
